# obs-studio

cmake/Modules/: CopyMSVCBins.cmake
dependencies/dependencies2013/win32/include/libavcodec/: avcodec.h
dependencies/dependencies2013/win32/include/libavformat/: avformat.h  avio.h  url.h
dependencies/dependencies2013/win32/include/libavutil/: avconfig.h  ffversion.h
plugins/obs-outputs/: CMakeLists.txt  ffmpeg-helper.c  obs-outputs.c  rtmp-stream.c
